<resources>
    <string name="app_name">WorkManager</string>
    <string name="simple_service">Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="intent_service">Internet Service</string>
    <string name="job_dispatchers">Job Scheduler</string>
    <string name="job_intent_service">Job Internet Service</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="work_manager">Work Manager</string>
</resources>