<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/simple_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_service" />

    <Button
        android:id="@+id/simple_foreground_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service" />

    <Button
        android:id="@+id/intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service" />

    <Button
        android:id="@+id/job_schedulers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_dispatchers" />

    <Button
        android:id="@+id/job_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service" />

    <Button
        android:id="@+id/alarm_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager" />

    <Button
        android:id="@+id/work_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager" />

</LinearLayout>